antlr-example/src/main/antlr4/.antlr/SQLiteParser.java
// Generated from /workspaces/antlrr/antlr-example/src/main/antlr4/SQLiteParser.g4 by ANTLR 4.13.1

    package com.example;
    import java.util.ArrayList;
    import java.util.List;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SQLiteParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SCOL=1, DOT=2, OPEN_PAR=3, CLOSE_PAR=4, COMMA=5, ASSIGN=6, STAR=7, PLUS=8, 
		MINUS=9, TILDE=10, PIPE2=11, DIV=12, MOD=13, LT2=14, GT2=15, AMP=16, PIPE=17, 
		LT=18, LT_EQ=19, GT=20, GT_EQ=21, EQ=22, NOT_EQ1=23, NOT_EQ2=24, SELECT_=25, 
		FROM_=26, WHERE_=27, INSERT_=28, UPDATE_=29, DELETE_=30, CREATE_=31, DROP_=32, 
		TABLE_=33, INTO_=34, VALUES_=35, SET_=36, AND_=37, OR_=38, NOT_=39, NULL_=40, 
		TRUE_=41, FALSE_=42, IS_=43, IN_=44, LIKE_=45, BETWEEN_=46, ORDER_=47, 
		BY_=48, GROUP_=49, HAVING_=50, LIMIT_=51, OFFSET_=52, ASC_=53, DESC_=54, 
		DISTINCT_=55, AS_=56, ON_=57, JOIN_=58, LEFT_=59, RIGHT_=60, INNER_=61, 
		OUTER_=62, UNION_=63, ALL_=64, EXISTS_=65, CASE_=66, WHEN_=67, THEN_=68, 
		ELSE_=69, END_=70, PRIMARY_=71, KEY_=72, FOREIGN_=73, REFERENCES_=74, 
		CONSTRAINT_=75, UNIQUE_=76, CHECK_=77, DEFAULT_=78, AUTOINCREMENT_=79, 
		INDEX_=80, VIEW_=81, TRIGGER_=82, PROCEDURE_=83, FUNCTION_=84, RETURN_=85, 
		IF_=86, DECLARE_=87, BEGIN_=88, COMMIT_=89, ROLLBACK_=90, TRANSACTION_=91, 
		SAVEPOINT_=92, RELEASE_=93, PRAGMA_=94, VACUUM_=95, REINDEX_=96, ANALYZE_=97, 
		EXPLAIN_=98, QUERY_=99, PLAN_=100, ALTER_=101, ADD_=102, COLUMN_=103, 
		RENAME_=104, TO_=105, DATABASE_=106, SCHEMA_=107, ATTACH_=108, DETACH_=109, 
		TEMPORARY_=110, TEMP_=111, VIRTUAL_=112, WITHOUT_=113, WITH_=114, RECURSIVE_=115, 
		REPLACE_=116, ABORT_=117, FAIL_=118, IGNORE_=119, ROLLBACK_KW_=120, CASCADE_=121, 
		RESTRICT_=122, NO_=123, ACTION_=124, MATCH_=125, FULL_=126, PARTIAL_=127, 
		SIMPLE_=128, DEFERRABLE_=129, DEFERRED_=130, IMMEDIATE_=131, INITIALLY_=132, 
		EXCLUSIVE_=133, COLLATE_=134, CONFLICT_=135, INDEXED_=136, NATURAL_=137, 
		CROSS_=138, USING_=139, NULLS_=140, FIRST_=141, LAST_=142, ESCAPE_=143, 
		GLOB_=144, REGEXP_=145, INTEGER_TYPE=146, REAL_TYPE=147, TEXT_TYPE=148, 
		BLOB_TYPE=149, NUMERIC_TYPE=150, VARCHAR_TYPE=151, CHAR_TYPE=152, DATE_TYPE=153, 
		DATETIME_TYPE=154, TIME_TYPE=155, TIMESTAMP_TYPE=156, IDENTIFIER=157, 
		NUMERIC_LITERAL=158, BIND_PARAMETER=159, STRING_LITERAL=160, BLOB_LITERAL=161, 
		SINGLE_LINE_COMMENT=162, MULTILINE_COMMENT=163, SPACES=164, UNEXPECTED_CHAR=165;
	public static final int
		RULE_parse = 0, RULE_sql_stmt_list = 1, RULE_sql_stmt = 2, RULE_select_stmt = 3, 
		RULE_insert_stmt = 4, RULE_update_stmt = 5, RULE_delete_stmt = 6, RULE_create_table_stmt = 7, 
		RULE_create_index_stmt = 8, RULE_drop_stmt = 9, RULE_pragma_stmt = 10, 
		RULE_explain_stmt = 11, RULE_column_def = 12, RULE_column_constraint = 13, 
		RULE_table_constraint = 14, RULE_foreign_key_clause = 15, RULE_conflict_clause = 16, 
		RULE_result_column = 17, RULE_table_or_subquery = 18, RULE_join_clause = 19, 
		RULE_join_operator = 20, RULE_join_constraint = 21, RULE_ordering_term = 22, 
		RULE_indexed_column = 23, RULE_expr = 24, RULE_literal_value = 25, RULE_unary_operator = 26, 
		RULE_binary_operator = 27, RULE_schema_name = 28, RULE_table_name = 29, 
		RULE_column_name = 30, RULE_index_name = 31, RULE_trigger_name = 32, RULE_view_name = 33, 
		RULE_module_name = 34, RULE_pragma_name = 35, RULE_savepoint_name = 36, 
		RULE_table_alias = 37, RULE_transaction_name = 38, RULE_column_alias = 39, 
		RULE_constraint_name = 40, RULE_collation_name = 41, RULE_foreign_table = 42, 
		RULE_function_name = 43, RULE_object_name = 44, RULE_any_name = 45, RULE_keyword = 46, 
		RULE_type_name = 47, RULE_name = 48, RULE_signed_number = 49, RULE_bind_parameter = 50, 
		RULE_pragma_value = 51;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "sql_stmt_list", "sql_stmt", "select_stmt", "insert_stmt", "update_stmt", 
			"delete_stmt", "create_table_stmt", "create_index_stmt", "drop_stmt", 
			"pragma_stmt", "explain_stmt", "column_def", "column_constraint", "table_constraint", 
			"foreign_key_clause", "conflict_clause", "result_column", "table_or_subquery", 
			"join_clause", "join_operator", "join_constraint", "ordering_term", "indexed_column", 
			"expr", "literal_value", "unary_operator", "binary_operator", "schema_name", 
			"table_name", "column_name", "index_name", "trigger_name", "view_name", 
			"module_name", "pragma_name", "savepoint_name", "table_alias", "transaction_name", 
			"column_alias", "constraint_name", "collation_name", "foreign_table", 
			"function_name", "object_name", "any_name", "keyword", "type_name", "name", 
			"signed_number", "bind_parameter", "pragma_value"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'.'", "'('", "')'", "','", "'='", "'*'", "'+'", "'-'", 
			"'~'", "'||'", "'/'", "'%'", "'<<'", "'>>'", "'&'", "'|'", "'<'", "'<='", 
			"'>'", "'>='", "'=='", "'!='", "'<>'", "'SELECT'", "'FROM'", "'WHERE'", 
			"'INSERT'", "'UPDATE'", "'DELETE'", "'CREATE'", "'DROP'", "'TABLE'", 
			"'INTO'", "'VALUES'", "'SET'", "'AND'", "'OR'", "'NOT'", "'NULL'", "'TRUE'", 
			"'FALSE'", "'IS'", "'IN'", "'LIKE'", "'BETWEEN'", "'ORDER'", "'BY'", 
			"'GROUP'", "'HAVING'", "'LIMIT'", "'OFFSET'", "'ASC'", "'DESC'", "'DISTINCT'", 
			"'AS'", "'ON'", "'JOIN'", "'LEFT'", "'RIGHT'", "'INNER'", "'OUTER'", 
			"'UNION'", "'ALL'", "'EXISTS'", "'CASE'", "'WHEN'", "'THEN'", "'ELSE'", 
			"'END'", "'PRIMARY'", "'KEY'", "'FOREIGN'", "'REFERENCES'", "'CONSTRAINT'", 
			"'UNIQUE'", "'CHECK'", "'DEFAULT'", "'AUTOINCREMENT'", "'INDEX'", "'VIEW'", 
			"'TRIGGER'", "'PROCEDURE'", "'FUNCTION'", "'RETURN'", "'IF'", "'DECLARE'", 
			"'BEGIN'", "'COMMIT'", null, "'TRANSACTION'", "'SAVEPOINT'", "'RELEASE'", 
			"'PRAGMA'", "'VACUUM'", "'REINDEX'", "'ANALYZE'", "'EXPLAIN'", "'QUERY'", 
			"'PLAN'", "'ALTER'", "'ADD'", "'COLUMN'", "'RENAME'", "'TO'", "'DATABASE'", 
			"'SCHEMA'", "'ATTACH'", "'DETACH'", "'TEMPORARY'", "'TEMP'", "'VIRTUAL'", 
			"'WITHOUT'", "'WITH'", "'RECURSIVE'", "'REPLACE'", "'ABORT'", "'FAIL'", 
			"'IGNORE'", null, "'CASCADE'", "'RESTRICT'", "'NO'", "'ACTION'", "'MATCH'", 
			"'FULL'", "'PARTIAL'", "'SIMPLE'", "'DEFERRABLE'", "'DEFERRED'", "'IMMEDIATE'", 
			"'INITIALLY'", "'EXCLUSIVE'", "'COLLATE'", "'CONFLICT'", "'INDEXED'", 
			"'NATURAL'", "'CROSS'", "'USING'", "'NULLS'", "'FIRST'", "'LAST'", "'ESCAPE'", 
			"'GLOB'", "'REGEXP'", "'INTEGER'", "'REAL'", "'TEXT'", "'BLOB'", "'NUMERIC'", 
			"'VARCHAR'", "'CHAR'", "'DATE'", "'DATETIME'", "'TIME'", "'TIMESTAMP'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SCOL", "DOT", "OPEN_PAR", "CLOSE_PAR", "COMMA", "ASSIGN", "STAR", 
			"PLUS", "MINUS", "TILDE", "PIPE2", "DIV", "MOD", "LT2", "GT2", "AMP", 
			"PIPE", "LT", "LT_EQ", "GT", "GT_EQ", "EQ", "NOT_EQ1", "NOT_EQ2", "SELECT_", 
			"FROM_", "WHERE_", "INSERT_", "UPDATE_", "DELETE_", "CREATE_", "DROP_", 
			"TABLE_", "INTO_", "VALUES_", "SET_", "AND_", "OR_", "NOT_", "NULL_", 
			"TRUE_", "FALSE_", "IS_", "IN_", "LIKE_", "BETWEEN_", "ORDER_", "BY_", 
			"GROUP_", "HAVING_", "LIMIT_", "OFFSET_", "ASC_", "DESC_", "DISTINCT_", 
			"AS_", "ON_", "JOIN_", "LEFT_", "RIGHT_", "INNER_", "OUTER_", "UNION_", 
			"ALL_", "EXISTS_", "CASE_", "WHEN_", "THEN_", "ELSE_", "END_", "PRIMARY_", 
			"KEY_", "FOREIGN_", "REFERENCES_", "CONSTRAINT_", "UNIQUE_", "CHECK_", 
			"DEFAULT_", "AUTOINCREMENT_", "INDEX_", "VIEW_", "TRIGGER_", "PROCEDURE_", 
			"FUNCTION_", "RETURN_", "IF_", "DECLARE_", "BEGIN_", "COMMIT_", "ROLLBACK_", 
			"TRANSACTION_", "SAVEPOINT_", "RELEASE_", "PRAGMA_", "VACUUM_", "REINDEX_", 
			"ANALYZE_", "EXPLAIN_", "QUERY_", "PLAN_", "ALTER_", "ADD_", "COLUMN_", 
			"RENAME_", "TO_", "DATABASE_", "SCHEMA_", "ATTACH_", "DETACH_", "TEMPORARY_", 
			"TEMP_", "VIRTUAL_", "WITHOUT_", "WITH_", "RECURSIVE_", "REPLACE_", "ABORT_", 
			"FAIL_", "IGNORE_", "ROLLBACK_KW_", "CASCADE_", "RESTRICT_", "NO_", "ACTION_", 
			"MATCH_", "FULL_", "PARTIAL_", "SIMPLE_", "DEFERRABLE_", "DEFERRED_", 
			"IMMEDIATE_", "INITIALLY_", "EXCLUSIVE_", "COLLATE_", "CONFLICT_", "INDEXED_", 
			"NATURAL_", "CROSS_", "USING_", "NULLS_", "FIRST_", "LAST_", "ESCAPE_", 
			"GLOB_", "REGEXP_", "INTEGER_TYPE", "REAL_TYPE", "TEXT_TYPE", "BLOB_TYPE", 
			"NUMERIC_TYPE", "VARCHAR_TYPE", "CHAR_TYPE", "DATE_TYPE", "DATETIME_TYPE", 
			"TIME_TYPE", "TIMESTAMP_TYPE", "IDENTIFIER", "NUMERIC_LITERAL", "BIND_PARAMETER", 
			"STRING_LITERAL", "BLOB_LITERAL", "SINGLE_LINE_COMMENT", "MULTILINE_COMMENT", 
			"SPACES", "UNEXPECTED_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SQLiteParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    public static class CommandCounter {
	        public int selectCount = 0;
	        public int insertCount = 0;
	        public int updateCount = 0;
	        public int deleteCount = 0;
	        public int createCount = 0;
	        public int dropCount = 0;
	        
	        public void printSummary() {
	            System.out.println("=== Command Summary ===");
	            System.out.println("SELECT statements: " + selectCount);
	            System.out.println("INSERT statements: " + insertCount);
	            System.out.println("UPDATE statements: " + updateCount);
	            System.out.println("DELETE statements: " + deleteCount);
	            System.out.println("CREATE statements: " + createCount);
	            System.out.println("DROP statements: " + dropCount);
	            System.out.println("Total commands: " + (selectCount + insertCount + updateCount + deleteCount + createCount + dropCount));
	        }
	    }
	    
	    public CommandCounter counter = new CommandCounter();

	public SQLiteParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SQLiteParser.EOF, 0); }
		public List<Sql_stmt_listContext> sql_stmt_list() {
			return getRuleContexts(Sql_stmt_listContext.class);
		}
		public Sql_stmt_listContext sql_stmt_list(int i) {
			return getRuleContext(Sql_stmt_listContext.class,i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8355053570L) != 0) || _la==PRAGMA_ || _la==EXPLAIN_) {
				{
				{
				setState(104);
				sql_stmt_list();
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110);
			match(EOF);
			 counter.printSummary(); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Sql_stmt_listContext extends ParserRuleContext {
		public List<Sql_stmtContext> sql_stmt() {
			return getRuleContexts(Sql_stmtContext.class);
		}
		public Sql_stmtContext sql_stmt(int i) {
			return getRuleContext(Sql_stmtContext.class,i);
		}
		public List<TerminalNode> SCOL() { return getTokens(SQLiteParser.SCOL); }
		public TerminalNode SCOL(int i) {
			return getToken(SQLiteParser.SCOL, i);
		}
		public Sql_stmt_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sql_stmt_list; }
	}

	public final Sql_stmt_listContext sql_stmt_list() throws RecognitionException {
		Sql_stmt_listContext _localctx = new Sql_stmt_listContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sql_stmt_list);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SCOL) {
				{
				{
				setState(113);
				match(SCOL);
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(119);
			sql_stmt();
			setState(128);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(121); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(120);
						match(SCOL);
						}
						}
						setState(123); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==SCOL );
					setState(125);
					sql_stmt();
					}
					} 
				}
				setState(130);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(134);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(131);
					match(SCOL);
					}
					} 
				}
				setState(136);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Sql_stmtContext extends ParserRuleContext {
		public Select_stmtContext select_stmt() {
			return getRuleContext(Select_stmtContext.class,0);
		}
		public Insert_stmtContext insert_stmt() {
			return getRuleContext(Insert_stmtContext.class,0);
		}
		public Update_stmtContext update_stmt() {
			return getRuleContext(Update_stmtContext.class,0);
		}
		public Delete_stmtContext delete_stmt() {
			return getRuleContext(Delete_stmtContext.class,0);
		}
		public Create_table_stmtContext create_table_stmt() {
			return getRuleContext(Create_table_stmtContext.class,0);
		}
		public Create_index_stmtContext create_index_stmt() {
			return getRuleContext(Create_index_stmtContext.class,0);
		}
		public Drop_stmtContext drop_stmt() {
			return getRuleContext(Drop_stmtContext.class,0);
		}
		public Pragma_stmtContext pragma_stmt() {
			return getRuleContext(Pragma_stmtContext.class,0);
		}
		public Explain_stmtContext explain_stmt() {
			return getRuleContext(Explain_stmtContext.class,0);
		}
		public Sql_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sql_stmt; }
	}

	public final Sql_stmtContext sql_stmt() throws RecognitionException {
		Sql_stmtContext _localctx = new Sql_stmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sql_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(137);
				select_stmt();
				}
				break;
			case 2:
				{
				setState(138);
				insert_stmt();
				}
				break;
			case 3:
				{
				setState(139);
				update_stmt();
				}
				break;
			case 4:
				{
				setState(140);
				delete_stmt();
				}
				break;
			case 5:
				{
				setState(141);
				create_table_stmt();
				}
				break;
			case 6:
				{
				setState(142);
				create_index_stmt();
				}
				break;
			case 7:
				{
				setState(143);
				drop_stmt();
				}
				break;
			case 8:
				{
				setState(144);
				pragma_stmt();
				}
				break;
			case 9:
				{
				setState(145);
				explain_stmt();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
